--- a/index.html
+++ b/index.html
@@ -16,14 +16,47 @@
 <header>
     <nav>
         <div class="container">
-            <div class="row">
+            <div style="margin-top: 40px;" class="row justify-content-between">
                 <div class="col-3">
-                    <img src="" alt="" class="logo">
+                    <img src="img/EFood.svg" alt="" class="logo">
+                </div>
+                <div class="col-4">
+                    <ul class="list">
+                        <li class="list_iteam"><a href="#!" class="list_a2">Home</a></li>
+                        <li class="list_iteam"><a href="#!" class="list_a">Service</a></li>
+                        <li class="list_iteam"><a href="#!" class="list_a">Topcities</a></li>
+                        <li class="list_iteam"><a href="#!" class="list_a">Contract</a></li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <img src="img/Search.png" alt="" class="search">
+                    <img src="img/Buy.png" alt="" class="buy">
+                </div>
+                <div class="col-3">
+                    <button class="up">Sign Up</button>
                 </div>
             </div>
         </div>
     </nav>
 </header>
+<section class="section_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="super">Super Fast <span class="superS">Food 
+                    Delivery</span> Service</h2>
+                    <p class="webProvide">We provide super fast-delivery service. Let’s use our <br> services right now and get discounts of up to 50%</p>
+                    <div class="exploreDiv">
+                        <button class="explore">Explore Food</button>
+                        <p class="download"><a href="#!" class="down_a">Download App</a></p>
+                    </div>
+            </div>
+            <div class="col-6">
+                <img src="img/" alt="" class="moto">
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
