--- a/index.html
+++ b/index.html
@@ -51,8 +51,46 @@
                         <p class="download"><a href="#!" class="down_a">Download App</a></p>
                     </div>
             </div>
-            <div class="col-6">
-                <img src="img/" alt="" class="moto">
+            <div class="col-3">
+                <img src="img/Scooter Guy.png" alt="" class="moto">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h2 class="popular">Our popular <span class="popularS">Category</span></h2>
+            </div>
+            <div style="margin-top: 50px;" class=" row justify-content-between">
+                <div class="col-2">
+                    <div class="bigCart">
+                        <img src="img/burger 1.png" alt="" class="burger">
+                        <h3 class="pizza">Burger</h3>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div id="zero" class="bigCart-2">
+                        <img src="img/pizza 1.png" alt="" class="burger">
+                        <h3 class="pizza">Pizza</h3>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="bigCart-2">
+                        <img src="img/Group (1).png" alt="" class="burger">
+                        <h3 class="pizza">sandwich</h3>
+                    </div>
+                </div>
+                <div id="one" class="col-2">
+                    <div class="bigCart-2">
+                        <img src="img/Vector (1) 1.png" alt="" class="burger">
+                        <h3 class="pizza">AsianFood</h3>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="bigCart-2">
+                        <img src="img/dish 1.png" alt="" class="burger">
+                        <h3 class="pizza">SetMenu</h3>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
