--- a/index.html
+++ b/index.html
@@ -59,38 +59,113 @@
             <div class="col-12">
                 <h2 class="popular">Our popular <span class="popularS">Category</span></h2>
             </div>
-            <div style="margin-top: 50px;" class=" row justify-content-between">
-                <div class="col-2">
-                    <div class="bigCart">
-                        <img src="img/burger 1.png" alt="" class="burger">
-                        <h3 class="pizza">Burger</h3>
-                    </div>
+        </div>
+        <div style="margin-top: 50px;" class=" row justify-content-between">
+            <div class="col-2">
+                <div class="bigCart">
+                    <img src="img/burger 1.png" alt="" class="burger">
+                    <h3 class="pizza">Burger</h3>
                 </div>
-                <div class="col-2">
-                    <div id="zero" class="bigCart-2">
-                        <img src="img/pizza 1.png" alt="" class="burger">
-                        <h3 class="pizza">Pizza</h3>
-                    </div>
+            </div>
+            <div class="col-2">
+                <div id="zero" class="bigCart">
+                    <img src="img/pizza 1.png" alt="" class="burger">
+                    <h3 class="pizza">Pizza</h3>
                 </div>
-                <div class="col-2">
-                    <div class="bigCart-2">
-                        <img src="img/Group (1).png" alt="" class="burger">
-                        <h3 class="pizza">sandwich</h3>
-                    </div>
+            </div>
+            <div class="col-2">
+                <div class="bigCart">
+                    <img src="img/Group (1).png" alt="" class="burger">
+                    <h3 class="pizza">sandwich</h3>
                 </div>
-                <div id="one" class="col-2">
-                    <div class="bigCart-2">
-                        <img src="img/Vector (1) 1.png" alt="" class="burger">
-                        <h3 class="pizza">AsianFood</h3>
-                    </div>
+            </div>
+            <div id="one" class="col-2">
+                <div class="bigCart">
+                    <img src="img/Vector (1) 1.png" alt="" class="burger">
+                    <h3 class="pizza">AsianFood</h3>
                 </div>
-                <div class="col-2">
-                    <div class="bigCart-2">
-                        <img src="img/dish 1.png" alt="" class="burger">
-                        <h3 class="pizza">SetMenu</h3>
-                    </div>
+            </div>
+            <div class="col-2">
+                <div class="bigCart">
+                    <img src="img/dish 1.png" alt="" class="burger">
+                    <h3 class="pizza">SetMenu</h3>
                 </div>
+            </div>
 
+        </div>
+        <div class="row justify-content-between">
+            <div class="col-2">
+              <div class="chize">
+               <div class="chize-1">
+                <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                <img src="img/Star.png" alt="" class="space">
+                <h3 class="chase">Cheeseburger With Salad</h3>
+                <p class="dollar">$18.00</p>
+                <button class="add">Add to Cart</button>
+               </div>
+              </div>
+            </div>
+            <div class="col-2">
+                <div class="chize">
+                 <div class="chize-1">
+                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/Star.png" alt="" class="space">
+                  <h3 class="chase">Cheeseburger With Salad</h3>
+                  <p class="dollar">$18.00</p>
+                  <button class="add">Add to Cart</button>
+                 </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="chize">
+                 <div class="chize-1">
+                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/Star.png" alt="" class="space">
+                  <h3 class="chase">Cheeseburger With Salad</h3>
+                  <p class="dollar">$18.00</p>
+                  <button class="add">Add to Cart</button>
+                 </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="chize">
+                 <div class="chize-1">
+                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/Star.png" alt="" class="space">
+                  <h3 class="chase">Cheeseburger With Salad</h3>
+                  <p class="dollar">$18.00</p>
+                  <button class="add">Add to Cart</button>
+                 </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="chize">
+                 <div class="chize-1">
+                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/Star.png" alt="" class="space">
+                  <h3 class="chase">Cheeseburger With Salad</h3>
+                  <p class="dollar">$18.00</p>
+                  <button class="add">Add to Cart</button>
+                 </div>
+                </div>
+              </div>
+              
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="var">
+                    <img src="img/Content.png" alt="" class="tochka">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div style="margin-top: 50px;" class="row">
+            <div class="col-6">
+                <img src="img/food delivery 4.png" alt="" class="pair">
+            </div>
+            <div class="col-6">
+                <h3 class="home"><span class="homeS">Stay</span> At Home, We Will Provide <span class="homeS">Good Food</span></h3>
             </div>
         </div>
     </div>
