--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="img/Scooter Guy.png" alt="" class="moto">
             </div>
         </div>
-        <div class="row">
+        <div class="row">  <!-- img da kart yasayotganda img ga width va height berib ketsa kart buzilib ketmaydi -->
             <div class="col-12">
                 <h2 class="popular">Our popular <span class="popularS">Category</span></h2>
             </div>
@@ -108,7 +108,7 @@
             <div class="col-2">
                 <div class="chize">
                  <div class="chize-1">
-                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/burvegre s.png" alt="" class="salad">
                   <img src="img/Star.png" alt="" class="space">
                   <h3 class="chase">Cheeseburger With Salad</h3>
                   <p class="dollar">$18.00</p>
@@ -119,7 +119,7 @@
               <div class="col-2">
                 <div class="chize">
                  <div class="chize-1">
-                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/item_01-480x480 1 (1).png" alt="" class="salad">
                   <img src="img/Star.png" alt="" class="space">
                   <h3 class="chase">Cheeseburger With Salad</h3>
                   <p class="dollar">$18.00</p>
@@ -130,7 +130,7 @@
               <div class="col-2">
                 <div class="chize">
                  <div class="chize-1">
-                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/item_01-480x480 1 (2).png" alt="" class="salad">
                   <img src="img/Star.png" alt="" class="space">
                   <h3 class="chase">Cheeseburger With Salad</h3>
                   <p class="dollar">$18.00</p>
@@ -141,7 +141,7 @@
               <div class="col-2">
                 <div class="chize">
                  <div class="chize-1">
-                  <img src="img/item_01-480x480 1.png" alt="" class="salad">
+                  <img src="img/item_01-480x480 1 (3).png" alt="" class="salad">
                   <img src="img/Star.png" alt="" class="space">
                   <h3 class="chase">Cheeseburger With Salad</h3>
                   <p class="dollar">$18.00</p>
@@ -160,18 +160,163 @@
         </div>
     </div>
     <div class="container">
-        <div style="margin-top: 50px;" class="row">
+        <div style="margin-top: 50px;" class="row justify-content-around">
             <div class="col-6">
                 <img src="img/food delivery 4.png" alt="" class="pair">
             </div>
-            <div class="col-6">
+            <div class="col-4">
                 <h3 class="home"><span class="homeS">Stay</span> At Home, We Will Provide <span class="homeS">Good Food</span></h3>
+                <p class="provide">We provide tasty food and superfast delivery at your home.  Let’s use our services right now and get discounts of up to 50%.</p>
+               <div class="fastCard">
+                <img src="img/stopwatch 1.png" alt="" class="china">
+                <p class="fast">Fasted Delivery in 30 Minutes</p>
+               </div>
+               <div class="fastCard">
+                <img src="img/Vector (1).png" alt="" class="china">
+                <p class="fast">300+ delivery men</p>
+               </div>
+               <div class="fastCard">
+                <img src="img/Resturent icon.png" alt="" class="china">
+                <p class="fast">500+ restaurant & cafe shop</p>
+               </div>
+               <button class="more">See more</button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <p class="top">Top Food <span class="topS">Restaurant</span></p>
             </div>
         </div>
     </div>
 </section>
-
-
+<section class="section_2">
+    <div class="container">
+        <div class="row justify-content-around">
+            <div class="col-3">
+                <div class="pizzaCard">
+                    <img src="img/Rectangle 53.svg" alt="" class="peperoni">
+                    <p class="blaze">Blaze Pizza</p>
+                  <div class="clockCard">
+                    <img src="img/timer 1.png" alt="" class="watch">
+                    <p class="clock">11.00 AM - 10.00 PM</p>
+                  <button class="leftB">
+                    <img src="img/Vecto 2r.png" alt="" class="left">
+                  </button>
+                  </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="pizzaCard">
+                    <img src="img/Rectangle 53 (1).svg" alt="" class="peperoni">
+                    <p class="blaze">Blaze Pizza</p>
+                  <div class="clockCard">
+                    <img src="img/timer 1.png" alt="" class="watch">
+                    <p class="clock">11.00 AM - 10.00 PM</p>
+                  <button class="leftB">
+                    <img src="img/Vecto 2r.png" alt="" class="left">
+                  </button>
+                  </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="pizzaCard">
+                    <img src="img/Rectangle 53 (2).svg" alt="" class="peperoni">
+                    <p class="blaze">Blaze Pizza</p>
+                  <div class="clockCard">
+                    <img src="img/timer 1.png" alt="" class="watch">
+                    <p class="clock">11.00 AM - 10.00 PM</p>
+                  <button class="leftB">
+                    <img src="img/Vecto 2r.png" alt="" class="left">
+                  </button>
+                  </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-around">
+            <div class="col-3">
+                <div class="pizzaCard">
+                    <img src="img/Rectangle 53 (5).svg" alt="" class="peperoni">
+                    <p class="blaze">Blaze Pizza</p>
+                  <div class="clockCard">
+                    <img src="img/timer 1.png" alt="" class="watch">
+                    <p class="clock">11.00 AM - 10.00 PM</p>
+                  <button class="leftB">
+                    <img src="img/Vecto 2r.png" alt="" class="left">
+                  </button>
+                  </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="pizzaCard">
+                    <img src="img/Rectangle 53 (4).svg" alt="" class="peperoni">
+                    <p class="blaze">Blaze Pizza</p>
+                  <div class="clockCard">
+                    <img src="img/timer 1.png" alt="" class="watch">
+                    <p class="clock">11.00 AM - 10.00 PM</p>
+                  <button class="leftB">
+                    <img src="img/Vecto 2r.png" alt="" class="left">
+                  </button>
+                  </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="pizzaCard">
+                    <img src="img/Rectangle 53 (3).svg" alt="" class="peperoni">
+                    <p class="blaze">Blaze Pizza</p>
+                  <div class="clockCard">
+                    <img src="img/timer 1.png" alt="" class="watch">
+                    <p class="clock">11.00 AM - 10.00 PM</p>
+                  <button class="leftB">
+                    <img src="img/Vecto 2r.png" alt="" class="left">
+                  </button>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div style="margin-top: 110px;" class="row">
+            <div class="col-5">
+                <h1 class="down">Download  Our <span class="downS">Mobile App</span></h1>
+                <p class="all">It's all at your fingertips -- the restaurants you love. Find the right food to suit your mood, and make the first bite last. Go ahead, download app and get 50% discount
+                </p>
+                <div class="marketing">
+                    <img src="img/Store=App Store, Style=Black.png" alt="" class="store">
+                    <img src="img/Store=Google Play, Style=Black.png" alt="" class="store2">
+                </div>
+            </div>
+            <div class="col-6">
+                <img src="img/Group 178.png" alt="" class="hash">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="top">What Our Client Are <span class="topS">Saying</span> </p>
+            </div>
+        </div>
+        <div style="margin-top: 50px;" class="row">
+            <div class="col-5">
+                <img src="img/Rectangle 8.svg" alt="" class="angelina">
+            </div>
+            <div class="col-5">
+                <p class="has">
+                    <img src="img/“.png" alt="" class="upwall">
+                    EFood has the most intriguing food order system in the country. UI in both their app and web Is very simple and easy to use, enhancing the UX. Their delivery men are also quite professional and knows the neighborhood well. Till now I never had to guide them to my address for delivery; <img src="img/“ (1).png" alt="" class="upwall">
+                </p>
+                <p class="jole">Anglina Jole</p>
+                <div class="food">
+                    <p class="over">Food lover</p>
+                 <div class="food2">
+                    <img src="img/ArrowLeft.png" alt="" class="arrow">
+                    <img src="img/ArrowRight.png" alt="" class="arrow1">
+                 </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
