--- a/index.html
+++ b/index.html
@@ -316,7 +316,49 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="get">
+                <div class="col-12">
+                  <div class="get_2">
+                    <h1 class="off">Subscribe to get the Latest Offer</h1>
+                    <p class="newPaper">Get our daily updates by subscribing to our newspaper, please drop your email below</p>
+                    <form class="enter">
+                       <input type="email" class="adres" placeholder="Enter your email addres">
+                       <button class="tele">
+                        <img src="img/dfdf.png" alt="" class="telegram">
+                        Subscribe
+                       </button>
+                    </form>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-2">
+                <img src="img/EFood.svg" alt="" class="efoodF">
+                <div class="gpsCard">
+                <img src="img/Location.svg" alt="" class="gpse">
+                <p class="dhaka">Dhaka, Bangladesh</p>
+                </div>
+                <div class="gpsCard">
+                    <img src="img/Location.svg" alt="" class="gpse">
+                    <p class="dhaka">Dhaka, Bangladesh</p>
+                    </div>
+                <div class="gpsCard">
+                        <img src="img/Location.svg" alt="" class="gpse">
+                        <p class="dhaka">Dhaka, Bangladesh</p>
+                 </div>
+                 <img src="img/sosmed.png" alt="" class="insta">
+                
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 
