--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 </section>
 <footer>
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-between">
             <div class="col-2">
                 <img src="img/EFood.svg" alt="" class="efoodF">
                 <div class="gpsCard">
@@ -346,16 +346,59 @@
                 <p class="dhaka">Dhaka, Bangladesh</p>
                 </div>
                 <div class="gpsCard">
-                    <img src="img/Location.svg" alt="" class="gpse">
+                    <img src="img/Calling.svg" alt="" class="gpse">
                     <p class="dhaka">Dhaka, Bangladesh</p>
                     </div>
                 <div class="gpsCard">
-                        <img src="img/Location.svg" alt="" class="gpse">
+                        <img src="img/Message.svg" alt="" class="gpse">
                         <p class="dhaka">Dhaka, Bangladesh</p>
                  </div>
                  <img src="img/sosmed.png" alt="" class="insta">
                 
             </div>
+            <div class="col-2">
+                <p class="servic">Service</p>
+                <p class="pro">How it works</p>
+                <p class="pro">Home delivery</p>
+                <p class="pro">Prducts</p>
+                <p class="pro">Menu</p>
+            </div>
+            <div class="col-2">
+                <p class="servic">Company</p>
+                <p class="pro">About Us</p>
+                <p class="pro">News</p>
+                <p class="pro">Our trusted partner</p>
+                <p class="pro">New users FAQ</p>
+            </div>
+            <div class="col-2">
+                <p class="servic">Supports</p>
+                <p class="pro">Help center</p>
+                <p class="pro">Feedbcak</p>
+                <p class="pro">Contact us</p>
+                <p class="pro">Terms conditins</p>
+            </div>
+            <div class="col-2">
+                <p class="servic">Resources</p>
+                <p class="pro">Download app</p>
+                <p class="pro">Blog</p>
+                <p class="pro">What’s new</p>
+                <p class="pro">Sitemap</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row justify-content-between">
+            <div class="col-3">
+                <p class="dell">© 2021 EFood - All rights reserved.</p>
+            </div>
+           <div class="col-1">
+            <p class="privacy">Privacy</p>
+        </div>
+       <div class="col-1">
+        <p class="privacy">Security</p>
+       </div>
+      <div class="col-1">
+        <p class="privacy">Terms</p>
+      </div>
         </div>
     </div>
 </footer>
