--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
                 </div>
                 <div class="gpsCard">
                     <img src="img/Calling.svg" alt="" class="gpse">
-                    <p class="dhaka">Dhaka, Bangladesh</p>
+                    <p class="dhaka">0943833399</p>
                     </div>
                 <div class="gpsCard">
                         <img src="img/Message.svg" alt="" class="gpse">
-                        <p class="dhaka">Dhaka, Bangladesh</p>
+                        <p class="dhaka">support@efood.com</p>
                  </div>
                  <img src="img/sosmed.png" alt="" class="insta">
                 
